[gd_scene load_steps=3 format=3 uid="uid://hidi6fefibyw"]

[ext_resource type="Script" uid="uid://qtnm0ia3djlo" path="res://scenes/Scripts/tutorial.gd" id="1_c13y7"]
[ext_resource type="AudioStream" uid="uid://btshkuou5uqh1" path="res://sounds/freesfx/FreeSFX/GameSFX/Music/Nes Style/Retro Music Loop - PV8 - NES Style 01.wav" id="2_8ho6b"]

[node name="tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c13y7")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 281.0
offset_top = 128.0
offset_right = 812.0
offset_bottom = 310.0
text = "Simple, w a s d to move, space or LMB to shoot.

Try to survive for five waves to win.

If you get too far from the radio tower, you will die.

Click on the tower to open shop.

You get money for killing enemies."

[node name="PLAY" type="Button" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 385.0
offset_right = 617.0
offset_bottom = 428.0
text = "PLAY
"

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 467.0
offset_right = 623.0
offset_bottom = 514.0
text = "BACK TO MENU"

[node name="bg music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8ho6b")

[connection signal="pressed" from="PLAY" to="." method="_on_play_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="finished" from="bg music" to="." method="_on_bg_music_finished"]
